--- a/core/package.json
+++ b/core/package.json
@@ -17,11 +17,7 @@
     "lint": "eslint ..",
     "lint:fix": "eslint .. --fix",
     "prettier": "prettier --check **/*.js",
-    "prettier:fix": "prettier --write **/*.js",
-    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml pull pairfly-events pairfly-chat && docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-    "docker:dev-build": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml pull pairfly-events pairfly-chat && docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build",
-    "docker:stg": "docker-compose -f docker-compose.yml -f docker-compose.stg.yml pull pairfly-events pairfly-chat && docker-compose -f docker-compose.yml -f docker-compose.stg.yml up",
-    "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up"
+    "prettier:fix": "prettier --write **/*.js"
   },
   "dependencies": {
     "@appetism/binant-codetest-shared": "file:../shared",
